add background and container

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <!--Vue 3-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <div id="app">
+    <div id="app">  
+        <div class="container">
 
+        </div>
     </div>
     <!--Script-->
     <script src="js/script.js"></script>
