--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <!--Vue 3-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <div id="app">  
-        <div class="container">
+        <div class="container d-flex">
+            <section id="sidebar">
 
+            </section>
+            <section id="chat">
+
+            </section>
         </div>
     </div>
     <!--Script-->
