add horizontal bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <div id="app">  
         <div class="container d-flex">
+            <!--Start of Sidebar-->
             <section id="sidebar">
+                <div class="x-side">
 
+                </div>
             </section>
+            <!--Start of chat-->
             <section id="chat">
+                <div class="x-side">
 
+                </div>
             </section>
         </div>
     </div>
