added profile pic and icons

--- a/index.html
+++ b/index.html
@@ -16,14 +16,30 @@
         <div class="container d-flex">
             <!--Start of Sidebar-->
             <section id="sidebar">
-                <div class="x-side">
-
+                <div class="x-side d-flex between">
+                    <div class="prof-pic">
+                        <img src="img/avatar_io.png" alt="myself-pic">
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-notch fa-2x"></i>
+                        <i class="fa-solid fa-message fa-2x"></i>
+                        <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
+                    </div>
                 </div>
             </section>
             <!--Start of chat-->
             <section id="chat">
-                <div class="x-side">
-
+                <div class="x-side d-flex between">
+                    <div>
+                        <div class="prof-pic">
+                            <img src="img/avatar_1.png" alt="myself-pic">
+                        </div>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                        <i class="fa-solid fa-paperclip fa-2x"></i>
+                        <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
+                    </div>
                 </div>
             </section>
         </div>
