--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="container d-flex">
             <!--Start of Sidebar-->
             <section id="sidebar">
-                <div class="x-side d-flex between">
-                    <div class="prof-pic">
+                <div class="x-side d-flex f-between f-center">
+                    <div class="prof-pic d-flex f-center">
                         <img src="img/avatar_io.png" alt="myself-pic">
+                        <span>Sofia</span>
                     </div>
                     <div>
                         <i class="fa-solid fa-circle-notch fa-2x"></i>
@@ -26,13 +27,16 @@
                         <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
                     </div>
                 </div>
+                <!--Push Notification-->
+
             </section>
             <!--Start of chat-->
             <section id="chat">
-                <div class="x-side d-flex between">
+                <div class="x-side d-flex f-between f-center">
                     <div>
-                        <div class="prof-pic">
-                            <img src="img/avatar_1.png" alt="myself-pic">
+                        <div class="prof-pic d-flex f-center">
+                            <img src="img/avatar_1.png" alt="michele">
+                            <div>Michele</div>
                         </div>
                     </div>
                     <div>
