--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                         <p>Attiva notifiche desktop</p>
                     </div>
                 </div>
+                <!--Search Bar-->
+                <div class="bg-gray" id="search-bar">
+                    <div class="input-search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <span>Cerca o inizia una nuova chat</span>
+                    </div>
+                </div>
             </section>
             <!--Start of chat-->
             <section id="chat">
