added first contact in chat list

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                         <span>Cerca o inizia una nuova chat</span>
                     </div>
                 </div>
+                <!--Start chat-list section-->
+                <div class="x-side  d-flex f-between f-center">
+                    <div class="prof-pic d-flex">
+                        <img src="img/avatar_io.png" alt="myself-pic">
+                        <span class="contact-name">Sofia</span>
+                    </div>
+                </div>
             </section>
             <!--Start of chat-->
             <section id="chat">
