--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.css' integrity='sha512-8BU3emz11z9iF75b10oPjjpamM4Mz23yQFQymbtwyPN3mNWHxpgeqyrYnkIUP6A8KyAj5k2p3MiYLtYqew7gIw==' crossorigin='anonymous'/>
     <!--Style-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Boolzapp</title>
+    <title>Boolzapp Ciao</title>
 </head>
 <body>
     <!--Vue 3-->
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <!--Push Notification-->
-
+                
             </section>
             <!--Start of chat-->
             <section id="chat">
