add text-bar for sending mex

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
                         <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
                     </div>
                 </div>
+                <!--Message Bar-->
+                <div id="send-bar" class="d-flex f-center">
+                    <i class="fa-regular fa-face-smile fa-2x"></i>
+                    <div id="text-bar">
+                        Scrivi un messaggio
+                    </div>
+                    <i class="fa-solid fa-microphone fa-2x"></i>
+                </div>
             </section>
         </div>
     </div>
