--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                         <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
                     </div>
                 </div>
+                <!--Message Section-->
+                <div>
+
+                </div>
                 <!--Message Bar-->
                 <div id="send-bar" class="d-flex f-center">
                     <i class="fa-regular fa-face-smile fa-2x"></i>
