added static messages

--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
                     </div>
                 </div>
                 <!--Message Section-->
-                <div>
-
+                <div id="message-list" class="d-flex col">
+                    <span class="message sent">Messaggio Inviato</span>
+                    <span class="message received">
+                        Messaggio Ricevuto
+                    </span>
                 </div>
                 <!--Message Bar-->
                 <div id="send-bar" class="d-flex f-center">
