better comments in html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </section>
             <!--Start of chat-->
             <section id="chat">
+                <!--Contact Info Section-->
                 <div class="x-side bg-gray d-flex f-between f-center">
                     <div>
                         <div class="prof-pic d-flex f-center">
@@ -77,12 +78,10 @@
                         {{ messageObj.message }}
                     </span>
                 </div>
-                <!--Message Bar-->
+                <!--Message Input Bar-->
                 <div id="send-bar" class="d-flex f-center">
                     <i class="fa-regular fa-face-smile fa-2x"></i>
-                    <div id="text-bar">
-                        Scrivi un messaggio
-                    </div>
+                    <input type="text" id="text-bar" placeholder="Scrivi un messaggio">
                     <i class="fa-solid fa-microphone fa-2x"></i>
                 </div>
             </section>
