addMessage problem solved

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <!--Message Input Bar-->
                 <div id="send-bar" class="d-flex f-center">
                     <i class="fa-regular fa-face-smile fa-2x"></i>
-                    <input type="text" id="text-bar" placeholder="Scrivi un messaggio" v-model="newMessageText"
-                    @keyup.enter="addMessage(newMessageText)" >
+                    <input type="text" id="text-bar" placeholder="Scrivi un messaggio" v-model="newText"
+                    @keyup.enter="addMessage(newText)">
                     <i class="fa-solid fa-microphone fa-2x"></i>
                 </div>
             </section>
