--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="bg-gray" id="search-bar">
                     <div class="input-search">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <span>Cerca o inizia una nuova chat</span>
+                        <input type="text" placeholder="Cerca o inizia una nuova chat">
                     </div>
                 </div>
                 <!--Start chat-list section-->
@@ -82,7 +82,7 @@
                 <div id="send-bar" class="d-flex f-center">
                     <i class="fa-regular fa-face-smile fa-2x"></i>
                     <input type="text" id="text-bar" placeholder="Scrivi un messaggio" v-model="newText"
-                    @keyup.enter="addMessage(newText)">
+                    keyup.enter="addMessage(newText)">
                     <i class="fa-solid fa-microphone fa-2x"></i>
                 </div>
             </section>
